// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader wrapper Loader renders correctly with text 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#1e5ad4"
    hidesWhenStopped={true}
    size="large"
  />
  <Text
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    text
  </Text>
</View>
`;

exports[`Loader wrapper Loader renders correctly without text 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="black"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;
